--- a/Android/Vuive/app/src/main/res/layout/activity_sign_up.xml
+++ b/Android/Vuive/app/src/main/res/layout/activity_sign_up.xml
@@ -88,7 +88,12 @@
                 android:textColor="@color/black"
                 tools:ignore="RtlSymmetry,TextContrastCheck" />
         </com.google.android.material.textfield.TextInputLayout>
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="* Password consists of 11 characters with lowercase, uppercase, numbers and special characters"
+            android:textColor="#FF0000"
+            android:paddingBottom="10dp"/>
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
