--- a/Android/Vuive/app/src/main/res/layout/layout_item.xml
+++ b/Android/Vuive/app/src/main/res/layout/layout_item.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/txtTenPhim"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#20f"
+                android:textColor="#000000"
                 android:textStyle="bold"
                 android:textSize="20sp"
                 android:text="nameTree" />
