--- a/Android/Vuive/app/src/main/res/layout/fragment_home.xml
+++ b/Android/Vuive/app/src/main/res/layout/fragment_home.xml
@@ -19,6 +19,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="220dp"
+            android:layout_marginTop="76dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="Home"
+            android:textColor="@color/submerged_text"
+            android:textSize="70sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <View
             android:id="@+id/view2_home"
             android:layout_width="match_parent"
@@ -27,7 +40,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view1_home"/>
+            app:layout_constraintTop_toBottomOf="@+id/view1_home" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout_hello"
@@ -143,9 +156,9 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="-25dp"
             android:background="@drawable/custom_edt_search"
             android:elevation="5dp"
-            android:layout_marginTop="-25dp"
             app:iconifiedByDefault="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -186,11 +199,11 @@
                     android:layout_marginTop="5dp"
                     android:text="ADDING NEW"
                     android:textColor="@color/button"
-                    android:textSize="12sp"/>
+                    android:textSize="12sp" />
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/layout_special"
+                android:id="@+id/layout_species"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
@@ -212,7 +225,7 @@
                     android:layout_marginTop="5dp"
                     android:text="SPECIES"
                     android:textColor="@color/button"
-                    android:textSize="12sp"/>
+                    android:textSize="12sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -244,10 +257,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
+            android:layout_marginTop="20dp"
             android:orientation="vertical"
             android:paddingHorizontal="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout_click">
@@ -263,11 +275,13 @@
                 android:id="@+id/rev_plant_type"
                 android:layout_width="match_parent"
                 android:layout_height="160dp"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="Photography"
                 android:textSize="16sp"
                 android:textStyle="bold|normal" />
@@ -276,6 +290,7 @@
                 android:id="@+id/rev_photography"
                 android:layout_width="match_parent"
                 android:layout_height="160dp"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
