--- a/Android/Vuive/app/src/main/res/layout/fragment_profile.xml
+++ b/Android/Vuive/app/src/main/res/layout/fragment_profile.xml
@@ -3,62 +3,67 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    android:background="@drawable/back_gound_profile"
+    android:layout_weight="3"
+    android:orientation="vertical"
     tools:context=".fragment.ProfileFragment">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:gravity="center|center_horizontal"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:orientation="vertical"
-
-        tools:ignore="ExtraText">>
+        android:gravity="center|center_horizontal"
+        android:background="@drawable/background_info">
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/imageProfile"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="0dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/avatar_default"
             android:scaleType="centerCrop"
-            android:src="@drawable/tho7mau5"
-            app:riv_corner_radius="100dp"></com.makeramen.roundedimageview.RoundedImageView>
-
+            app:riv_corner_radius="80dp"/>
 
         <TextView
-            android:id="@+id/idProfile"
+            android:id="@+id/tv_name_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:gravity="bottom"
-            android:padding="10dp"
-            android:text="Tran Ngoc Tai"
-            android:textColor="#FFFFFF"
-            android:textSize="30dp"
-            android:textStyle="bold" />
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="26sp"/>
 
         <TextView
-            android:id="@+id/locateProfile"
+            android:id="@+id/tv_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:gravity="center"
             android:drawableStart="@drawable/location"
-            android:text="  Tân Bình,Hồ Chí Minh"
-            android:textColor="#FFFFFF"
-            android:textSize="20dp"
-            android:textStyle="italic" />
+            android:textColor="@color/white"
+            android:textSize="22sp"/>
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_signout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sign out"
+            android:background="@drawable/custom_edt_search"
+            android:textColor="@color/button"/>
     </LinearLayout>
 
-    <com.google.android.material.tabs.TabLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tabDemo"/>
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:background="@color/white"
+        android:orientation="vertical">
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/pagerTest"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        <com.google.android.material.tabs.TabLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tabDemo"/>
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/pagerTest"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 </LinearLayout>
